
Changelog for Structure Synth:
------------------------------
14 Jan 09 [MHC] Updated web page
[2h]            More work on the GUI editors.

5  Jan 09 [MHC] Corrected some syntax highlighter bugs...
[1h]

4  Jan 09 [MHC] Restored GCC/Linux code compatibility. (Some header paths were invalid)
[1h]

3  Jan 09 [MHC] Implemented a 'Triangle'. E.g.: 'Triangle[0,0,0;1,0,0;0.5,0.5,0.5]' is now a valid primitive.
[3h]

2  Jan 09 [MHC] Some refactoring. Started sketching a framework for GUI editors for the '#define' statements.
[4h]            Some more work on the QtScripting.

30 Dec 08 [MHC] Added support for '#define varname value' preprocessor substitutions. (Useful for declaring constant variables)
[1h]

23 Nov 08 [MHC] Started experimenting with QtScript'ing.
[4h]

18 Nov 08 [MHC] Fixed a bug when going into full screen mode (not all chrome was hidden).
[1h]

17 Nov 08 [MHC] Tried to find out why I could not run in Release mode without crashing on Windows anymore.
[1h]            Turns out, that QtScriptd4.dll works just fine, but my QtScript4.dll does not, and crashes when called into. This is weird.
                Well, I tried linking to another set of DLL found here (http://pallas.copai.de/index.php?option=com_content&view=article&id=49&Itemid=58), and these works too.
                Weirdness. Well, recompiling the entire Qt just takes too long, so I will not test this.
                
16 Nov 08 [MHC] Started added stub code for the JavaScript controller interface. 
[2h]            This will make it possible to use JavaScript (using Qt's embedded JavaScript interpreter) to make e.g. animations.
                
----- Release of v0.8.5 (Exonautica Reloaded) [13 Jul 2008 ] ----------------------------------------------------------
This release: 14 hours of work: 12 hours coding, 2 hours non-coding. (9 log entries)
Stats total: 133 hours total shared over 70 log entries. 92 hours coding, 41 hours non-coding

