@@ -17,9 +17,11 @@ namespace StructureSynth {
 			this->alpha = rhs.alpha;
 			this->maxDepths = rhs.maxDepths;
 			if (rhs.prevMatrix) {
+				delete(this->prevMatrix);
 				this->prevMatrix = new SyntopiaCore::Math::Matrix4f();
 				*(this->prevMatrix) = *rhs.prevMatrix;
 			} else {
+				delete(this->prevMatrix);
 				this->prevMatrix = 0;
 			}
 			return *this;
@@ -36,10 +38,13 @@ namespace StructureSynth {
 		State::State(const State& rhs) : matrix(rhs.matrix), 
 			hsv(rhs.hsv), 
 			alpha(rhs.alpha), maxDepths(rhs.maxDepths), prevMatrix(0) {
+
 			if (rhs.prevMatrix) {
+				delete(this->prevMatrix);
 				this->prevMatrix = new SyntopiaCore::Math::Matrix4f();
 				*(this->prevMatrix) = *rhs.prevMatrix;
 			} else {
+				delete(this->prevMatrix);
 				this->prevMatrix = 0;
 			}
 		}
